k8s/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spe-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: attendance.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: attendance-service
                port:
                  number: 8080
    - host: face-recognition.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: face-recognition-service
                port:
                  number: 5001
    - host: qr-attendance.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qr-code-attendance
                port:
                  number: 8081
    - host: frontend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
    - host: server-registry.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-registry
                port:
                  number: 8761
